// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Banner examples CustomButtonsDropdownmenuComponent should render correctly 1`] = `
<div>
  <div
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      class="v-button v-dropdown"
      type="button"
      v-button=""
      v-floating-ui-trigger=""
    >
       Action 
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
    >
      <ul
        class="v-listbox"
        v-dropdown-list=""
        vaddarrowkeys=""
      >
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            subtle=""
            v-dropdown-item=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-export v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-export-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-secondary"
                d="M9.08594 2H2V14H9.08594L11.0859 16H0V0H11.0859L9.08594 2ZM12 14V14.0859L11.9141 14H12ZM12 2H11.9141L12 1.91406V2Z"
              />
              <path
                class="v-icon-primary"
                d="M10.7073 12.7314L9.29321 11.3174L11.5862 9.02441H5.00024V7.02441H11.5862L9.29321 4.73145L10.7073 3.31738L15.4143 8.02441L10.7073 12.7314Z"
              />
            </svg>
             Label 1
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            disabled="disabled"
            subtle=""
            v-dropdown-item=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-copy v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-copy-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-secondary"
                d="M4 4.00098V14.001H10V16.001H2V4.00098H4Z"
              />
              <path
                class="v-icon-primary"
                d="M15 12.001H6V10.001H13V2.00098H8V8.00098H6V0.000976562H15V12.001Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000976562)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
             Label 2
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            subtle=""
            v-dropdown-item=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-file-download v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-file-download-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-secondary"
                d="M16 16H0V10H2V14H14V10H16V16Z"
              />
              <path
                class="v-icon-primary"
                d="M8.70703 8.58594L11 6.29297L12.4141 7.70703L7.70703 12.4141L3 7.70703L4.41406 6.29297L6.70703 8.58594V0H8.70703V8.58594Z"
              />
            </svg>
             Label 3
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-button-destructive v-justify-content-start"
            v-dropdown-item=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-delete-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-secondary"
                d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7V0.000488281H9V2.00049Z"
              />
              <path
                class="v-icon-primary"
                d="M11.207 7.20752L9.41406 9.00049L11.207 10.7935L9.79297 12.2075L8 10.4146L6.20703 12.2075L4.79297 10.7935L6.58594 9.00049L4.79297 7.20752L6.20703 5.79346L8 7.58643L9.79297 5.79346L11.207 7.20752Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
             Label 4 
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Banner examples CustomLinksDropdownmenuComponent should render correctly 1`] = `
<div>
  <div
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      class="v-button v-dropdown"
      type="button"
      v-button=""
      v-floating-ui-trigger=""
    >
       Action 
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface v-flex v-flex-col"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
      vflex=""
      vflexcol=""
    >
      <ul
        class="v-listbox"
        v-dropdown-list=""
        vaddarrowkeys=""
      >
        <li>
          <a
            class="v-dropdown-item v-listbox-item v-link v-flex v-flex-row"
            href="./components/dropdown-menu"
            justifycontentstart=""
            v-dropdown-item=""
            v-link=""
            vflex=""
          >
            Label 1
          </a>
        </li>
        <li>
          <a
            class="v-dropdown-item v-listbox-item v-link v-flex v-flex-row v-justify-content-start"
            href="./components/dropdown-menu"
            v-dropdown-item=""
            v-link=""
            vflex=""
            vjustifycontentstart=""
          >
            Label 2
          </a>
        </li>
        <li>
          <a
            class="v-dropdown-item v-listbox-item v-link v-flex v-flex-row v-justify-content-start"
            href="./components/dropdown-menu"
            v-dropdown-item=""
            v-link=""
            vflex=""
            vjustifycontentstart=""
          >
            Label 3
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Banner examples FormDropdownmenuComponent should render correctly 1`] = `
<div>
  <div
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      class="v-button v-dropdown"
      type="button"
      v-button=""
      v-floating-ui-trigger=""
    >
       Action 
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
    >
      <div
        class="v-gap-8 v-flex v-flex-col v-p-16"
        vflex=""
        vflexcol=""
        vgap="8"
        vp="16"
      >
        <label
          class="v-label"
          for="input-1"
          id="a-v-label-0"
          v-label=""
        >
          ID
        </label>
        <div
          class="v-input-container v-surface"
          v-input-container=""
        >
          <input
            class="v-input"
            id="input-1"
            v-input=""
            value=""
          />
          
        </div>
        <label
          class="v-label"
          for="select-1"
          id="a-v-label-1"
          v-label=""
        >
          Status
        </label>
        <div
          class="v-input-container v-surface"
          v-input-container=""
        >
          <select
            class="v-input"
            id="select-1"
            v-select=""
          >
            <option
              hidden=""
            />
            <option
              value="pending"
            >
              Pending
            </option>
            <option
              value="approved"
            >
              Approved
            </option>
            <option
              value="rejected"
            >
              Rejected
            </option>
          </select>
          <div
            class="v-input-control"
          />
          
        </div>
        <button
          class="v-button"
          type="button"
          v-button=""
        >
          Apply
        </button>
        <button
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner examples IconButtonDropdownmenuComponent should render correctly 1`] = `
<div>
  <div
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      aria-label="dropdown menu with custom icon"
      class="v-button v-dropdown v-button-icon"
      type="button"
      v-button-icon=""
      v-floating-ui-trigger=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-low v-icon-option-horizontal v-icon-visa"
        focusable="false"
        height="24"
        v-icon-visa-option-horizontal-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-primary"
          d="M3 10C4.10457 10 5 10.8954 5 12C5 13.1046 4.10457 14 3 14C1.89543 14 1 13.1046 1 12C1 10.8954 1.89543 10 3 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM21 10C22.1046 10 23 10.8954 23 12C23 13.1046 22.1046 14 21 14C19.8954 14 19 13.1046 19 12C19 10.8954 19.8954 10 21 10Z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
    >
      <ul
        class="v-listbox"
        v-dropdown-list=""
        vaddarrowkeys=""
      >
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            v-dropdown-item=""
          >
            Label 1
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            v-dropdown-item=""
          >
            Label 2
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            v-dropdown-item=""
          >
            Label 3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Banner examples NativePopoverDropdownmenuComponent should render correctly 1`] = `
<div>
  <div>
    <button
      class="v-button"
      popovertarget="mypopover"
      type="button"
      v-button=""
    >
       Action 
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      id="mypopover"
      popover=""
    >
      <div
        aria-hidden="true"
        class="v-dropdown-menu v-surface v-flex v-flex-col"
        style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; z-index: 200;"
        v-dropdown-menu=""
        vflex=""
        vflexcol=""
      >
        <ul
          class="v-listbox"
          v-dropdown-list=""
          vaddarrowkeys=""
        >
          <li>
            <button
              class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
              subtle=""
              v-dropdown-item=""
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-export v-icon-tiny v-icon-visa"
                focusable="false"
                height="16"
                v-icon-visa-export-tiny=""
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  class="v-icon-secondary"
                  d="M9.08594 2H2V14H9.08594L11.0859 16H0V0H11.0859L9.08594 2ZM12 14V14.0859L11.9141 14H12ZM12 2H11.9141L12 1.91406V2Z"
                />
                <path
                  class="v-icon-primary"
                  d="M10.7073 12.7314L9.29321 11.3174L11.5862 9.02441H5.00024V7.02441H11.5862L9.29321 4.73145L10.7073 3.31738L15.4143 8.02441L10.7073 12.7314Z"
                />
              </svg>
               Label 1
            </button>
          </li>
          <li>
            <button
              class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
              subtle=""
              v-dropdown-item=""
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-copy v-icon-tiny v-icon-visa"
                focusable="false"
                height="16"
                v-icon-visa-copy-tiny=""
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  class="v-icon-secondary"
                  d="M4 4.00098V14.001H10V16.001H2V4.00098H4Z"
                />
                <path
                  class="v-icon-primary"
                  d="M15 12.001H6V10.001H13V2.00098H8V8.00098H6V0.000976562H15V12.001Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000976562)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
               Label 2
            </button>
          </li>
          <li>
            <button
              class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
              subtle=""
              v-dropdown-item=""
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-file-download v-icon-tiny v-icon-visa"
                focusable="false"
                height="16"
                v-icon-visa-file-download-tiny=""
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  class="v-icon-secondary"
                  d="M16 16H0V10H2V14H14V10H16V16Z"
                />
                <path
                  class="v-icon-primary"
                  d="M8.70703 8.58594L11 6.29297L12.4141 7.70703L7.70703 12.4141L3 7.70703L4.41406 6.29297L6.70703 8.58594V0H8.70703V8.58594Z"
                />
              </svg>
               Label 3
            </button>
          </li>
          <li>
            <button
              class="v-dropdown-item v-listbox-item v-button-destructive v-button v-button-tertiary v-justify-content-start"
              destructive=""
              type="button"
              v-button=""
              v-dropdown-item=""
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-delete v-icon-tiny v-icon-visa"
                focusable="false"
                height="16"
                v-icon-visa-delete-tiny=""
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  class="v-icon-secondary"
                  d="M9 2.00049H16V4.00049H14V16.0005H2V6.00049H4V14.0005H12V4.00049H0V2.00049H7V0.000488281H9V2.00049Z"
                />
                <path
                  class="v-icon-primary"
                  d="M11.207 7.20752L9.41406 9.00049L11.207 10.7935L9.79297 12.2075L8 10.4146L6.20703 12.2075L4.79297 10.7935L6.58594 9.00049L4.79297 7.20752L6.20703 5.79346L8 7.58643L9.79297 5.79346L11.207 7.20752Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
               Label 4
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner examples TextButtonDropdownmenuComponent should render correctly 1`] = `
<div>
  <div
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      class="v-button v-dropdown"
      type="button"
      v-button=""
      v-floating-ui-trigger=""
    >
       Action 
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface v-flex v-flex-col"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
      vflex=""
      vflexcol=""
    >
      <ul
        class="v-listbox"
        v-dropdown-list=""
        vaddarrowkeys=""
      >
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            v-dropdown-item=""
          >
            Label 1
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            v-dropdown-item=""
          >
            Label 2
          </button>
        </li>
        <li>
          <button
            class="v-dropdown-item v-listbox-item v-button v-button-tertiary v-justify-content-start"
            v-dropdown-item=""
          >
            Label 3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
